// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module version table Rendering module version table not showing up 1`] = `
<div>
  <table
    class="bp3-html-table table"
    data-testid="release-note-table"
  >
    <thead>
      <tr
        data-testid="release-note-table-head"
        style="background-color: rgb(226, 245, 255);"
      >
        <th
          class="th"
        >
          common.resourceCenter.ticketmenu.component
        </th>
        <th
          class="th"
        >
          version
        </th>
        <th
          class="th"
        >
          lastUpdated
        </th>
        <th
          class="th"
        >
          common.resourceCenter.bottomlayout.releaseNote
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`module version table Rendering module version table showing up 1`] = `
<div>
  <table
    class="bp3-html-table table"
    data-testid="release-note-table"
  >
    <thead>
      <tr
        data-testid="release-note-table-head"
        style="background-color: rgb(226, 245, 255);"
      >
        <th
          class="th"
        >
          common.resourceCenter.ticketmenu.component
        </th>
        <th
          class="th"
        >
          version
        </th>
        <th
          class="th"
        >
          lastUpdated
        </th>
        <th
          class="th"
        >
          common.resourceCenter.bottomlayout.releaseNote
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="tr"
      >
        <td
          class="td"
          data-testid="name"
        >
          testDisplayName
        </td>
        <td
          class="td"
          data-testid="version"
        >
          7800
        </td>
        <td
          class="td"
          data-testid="updated"
        >
          testUpdate
        </td>
        <td
          class="td"
          data-testid="link"
        >
          <a
            href="link"
            rel="noreferrer noopener"
            target="_blank"
          >
            Link
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
